# napiod

./: .gitignore  .gitmodules  README.md  actions.yml  napiod.yml  pyproject.toml  setup.py
.github/workflows/: publish-to-test-pypi.yml  python-package-conda.yml  python-package.yml  test_pip_installation.yml
examples/: market_regimes.py  simulate_execution.py  trend_following_seller_in_balanced_illiquid_market.ipynb
napiod/: __init__.py  impact.c  impact.pyx  intensities.c  intensities.pyx  model.c  model.pyx  plot.py  setup.py
tests/: impact_test.py  intensities_test.py  model_test.py  napiodtest.yml
tutorials/: build_install.md  full_setup_from_source.md
