# pyproject.toml
[build-system]
requires = [ "setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "napiod"
version = "1.0.0"
description = "Non-average price impact in order driven markets"
readme = "README.md"
authors = [
{name="Claudio Bellani", email="claudio.bellani01@gmail.com"}]
dependencies = [
	"numpy<1.22",
        "scipy",
        "ipykernel",
        "matplotlib",
        "mpoints==1.0.0",
]

[tool.setuptools.packages]
find = {}
